# teloclip

./: .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  DOCKER.md  Dockerfile  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cff-validator.yml  docker-build.yml  publish.yml  pytest.yml  ruff.yml  update-citation-cff-improved.yml  update-citation-cff.yml
data/: test.bam.bai
examples/nextflow/: README.md  teloclip.nf
examples/nextflow/modules/teloclip/extend/: main.nf  meta.yml
examples/nextflow/modules/teloclip/extract/: main.nf  meta.yml
examples/nextflow/modules/teloclip/filter/: main.nf  meta.yml
scripts/: build-docker.sh  test-docker.sh
src/teloclip/: __init__.py  _version.py  analysis.py  app.py  app_extract.py  bio_io.py  cli.py  enhanced_samops.py  extension.py  extract_io.py  logs.py  motifs.py  run_extract.py  samops.py  seqops.py  streaming_analysis.py  streaming_io.py  utils.py
src/teloclip/commands/: __init__.py  extend.py  extract.py  extract_enhanced.py  filter.py
teloclip/: __init__.py  run_extract.py  run_self.py  wrappers.py
tests/: __init__.py  conftest.py  test_anchor_validation.py  test_motifs.py
tests/cli/: conftest.py  test_extend_cli.py  test_extract_cli.py  test_filter_cli.py  test_main_cli.py
tests/data/: overhangs.sam  stats.md  stats_bio.md  telo_extended_bio.fna  telo_extended_test.fna  test.bam  test.sam
tests/integration/: test_generate_alignments.py  test_generate_data.py  test_teloclip_extend_integration.py  test_validate_integration.py
tests/integration/test_data/: synthetic_alignments.bam  synthetic_alignments.sam  synthetic_alignments_sorted.bam  synthetic_alignments_sorted.bam.bai  synthetic_contigs.fasta  synthetic_contigs.fasta.fai
tests/unit/: test_analysis.py  test_bio_io.py  test_extend_parsing.py  test_extension.py  test_extract_io.py  test_logs.py  test_motifs.py  test_motifs_unit.py  test_samops.py  test_seqops.py  test_streaming_io.py  test_utils.py
