[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "teloclip"
description = "A tool for the recovery of unassembled telomeres from soft-clipped read alignments."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Adam Taranto", email = "adam.p.taranto@gmail.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]

#dependencies = ["biopython"]

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/adamtaranto/teloclip"
documentation = "https://github.com/adamtaranto/teloclip"
repository = "https://github.com/adamtaranto/teloclip"

[project.scripts]
teloclip = "teloclip.app:main"
teloclip-extract = "teloclip.app_extract:main"

[tool.hatch.build]
source = "src"

exclude = [
    "environment.yml",
    ".gitpod.Dockerfile",
    ".gitpod.yml",
    ".dockerignore",
    ".vscode",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.vcs]
tag-pattern = "v*"  # Git tags starting with 'v' will be used for versioning
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/teloclip/_version.py"

[project.optional-dependencies]
tests = ["pytest"]